--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
-    <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <link href="assets/css/demo-001.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!--     Google Fonts     -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
@@ -122,11 +123,11 @@
                 </article>
             </div>
         </section>
-    <section class="section section--emphasised">
+    <section class="section section--emphasised how-to-count">
         <div class="row">
             <header class="col-md-6">
                 <h1>Jak Się Spisać?</h1>
-                <h5>Krok po kroku</h5>
+                <h3>Krok po kroku</h3>
             </header>
             <article class="col-md-6">
                 <h2>Czy trzeba się przygotować</h2>
@@ -235,15 +236,53 @@
             </article>
         </div>
     </section>
-</main>
-<footer class="container">
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <div class="credits">
-                &copy; <script>document.write(new Date().getFullYear())</script> Get Shit Done Kit by <a href="http://creative-tim.com"> Creative Tim</a>, made with <i class="fa fa-heart heart" alt="love"></i> for a better web.
+
+
+    <section class="section">
+        <div class="row">
+            <header class="col-md-6">
+                <h1>A co wpisać, jeśli…?</h1>
+                <h3>I inne pytania</h3>
+            </header>
+            <div class="col-md-6">
+            <article>
+                <h4>Jestem ochrzczona, ale od lat nie chodzę do kościoła, czy muszę zaznaczać kościół rzymskokatolicki?</h4>
+                <ul>
+                    <li>chrześcijaństwo - jeśli wierzysz w Jezusa Chrystusa, ale nie chcesz być liczony/a jako katolik/ katoliczka</li>
+                    <li>teizm - jeśli wierzysz w osobowego Boga, który ma wpływ na Twoje życie</li>
+                    <li>deizm - jeśli wierzysz w bezosobowego boga, który wpływa na nasze życie</li>
+                    <li>agnostycyzm - jeśli nie rozstrzygasz kwestii istnienia boga/ bogów lub nie umiesz odpowiedzieć na pytanie, czy istnieją</li>
+                    <li>ateizm - jeśli jesteś przekonany/a, że bogowie nie istnieją.</li>
+                </ul>
+            </article>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="section section--emphasised">
+        <div class="row">
+        <div class="col-md-6">
+            <h1>Po co w ogóle brać udział?</h1>
+            <p>
+                Chcesz się liczyć? Policz się sam! Rezygnując z udziału w spisie, znikasz, tracisz głos. Podobnie jak w przypadku, kiedy nie idziesz głosować. Odrzucasz możliwość odpowiadania zgodnie z prawdą i własnym sumieniem.
+            </p>
+            <p>
+                W przypadku wyznania może Ci nawet zostać przypisana odpowiedź Twoich rodziców.<br/>
+                A wyznanie ma szczególne znaczenie. Od lat mówi się, że 96% Polaków to katolicy (dane ze spisu w 2011 roku). Właśnie to przekonanie wzmacnia pozycję kościoła katolickiego i jego wpływ na politykę. Wspiera też prawicę i ucisza postępowe głosy członków partii centrowych.
+            </p>
+            <p>
+                Tylko osobisty udział w spisie zapewnia, że udzielisz takiej odpowiedzi, jakiej zechcesz.
+            </p>
+        </div>
+        </div>
+    </section>
+
+
+</main>
+<footer class="footer">
+            <p class="footer__credits">
+                &copy; 2021 Liczę Się - zrobione z <i class="fa fa-heart heart" alt="miłością"></i> dla lepszej przyszłości.
+            </p>
 </footer>
 
 </body>
