--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/styles-001.css" rel="stylesheet" />
+    <link href="assets/css/styles-002.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
@@ -91,6 +91,7 @@
         </div>
     </section>
 
+    <a id="o-co-chodzi"></a>
     <section class="section">
         <div class="container">
         <div class="row info-boxes">
@@ -136,7 +137,8 @@
         <div class="container">
             <div class="row">
             <header class="col-md-6">
-                <h1>Jak Się Spisać?</h1>
+                <a id="jak-sie-spisac"></a>
+                <h1 class="target-indicator">Jak Się Spisać?</h1>
                 <h3>Krok po kroku</h3>
             </header>
             <article class="col-md-6">
@@ -185,10 +187,12 @@
                 </p>
                 <pre>INFORMACJE W TEJ CZĘŚCI BĘDĄ POPRAWIANE NA BIEŻĄCO</pre>
             </article>
-        </div>
-            <div class="row">
+            </div>
+
+            <a id="wyznanie"></a>
+            <div class="row target-indicator-wrapper">
             <article class="col-md-6 col-md-offset-6">
-                <h2>Pytanie o wyznanie</h2>
+                <h2 class="target-indicator">Pytanie o wyznanie</h2>
                 <p>
                     Pytanie o wyznanie znajdziesz w trzeciej części formularza spisowego. Zawiera ona
                     “<em>formularze osobowe</em>” dotyczące poszczególnych domowników. Pytanie zadawane jest zaraz po tych o
@@ -248,12 +252,12 @@
         </div>
     </section>
 
-
+    <a id="pytania-i-odpowiedzi"></a>
     <section class="section ">
         <div class="container">
         <div class="row">
             <header class="col-md-6">
-                <h1>A co wpisać, jeśli…?</h1>
+                <h1  class="target-indicator">A co wpisać, jeśli…?</h1>
                 <h3>I inne pytania</h3>
             </header>
             <div class="col-md-6">
@@ -323,11 +327,12 @@
         </div>
     </section>
 
+    <a id="po-co-mam-brac-udzial"></a>
     <section class="section section--emphasised ">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-            <h1>Po co w ogóle brać udział?</h1>
+            <h1 class="target-indicator">Po co w ogóle brać udział?</h1>
             <p>
                 Chcesz się liczyć? Policz się sam! Rezygnując z udziału w spisie, znikasz, tracisz głos. Podobnie jak w przypadku, kiedy nie idziesz głosować. Odrzucasz możliwość odpowiadania zgodnie z prawdą i własnym sumieniem.
             </p>
