expandable menu on low resolution

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
-<header id="navbar-full">
+<header>
     <div class="container">
         <nav class="navbar navbar-ct navbar-custom-grey navbar-fixed-top navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <a class="navbar-toggle" data-toggle="collapse" href="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </a>
                 <a href="/">
                     <div class="logo-container">
                         <h1 class="brand">Chcę się liczyć</h1>
@@ -43,7 +43,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#o-co-chodzi">O co chodzi?</a></li>
                   <li><a href="#jak-sie-spisac">Jak się spisać?</a></li>
