--- a/indexxx.html
+++ b/indexxx.html
@@ -68,7 +68,7 @@
             <header class="col-md-5">
                 <div class="main-title">
                     <h1>Spis Powszechny Online</h1>
-                    <h3>1/04 - 20/06</h3>
+                    <h3>1.04 - 30.06</h3>
                 </div>
                 <blockquote>
                     “my, Naród Polski - wszyscy obywatele(...),<br/>
@@ -324,8 +324,8 @@
         <div class="container">
         <div class="row">
             <header class="col-md-6">
-                <h1  class="target-indicator">A co wpisać, jeśli…?</h1>
-                <h3>I inne pytania</h3>
+                <h1  class="target-indicator">A co mogę wpisać, jeśli…</h1>
+                <h3>i inne pytania</h3>
             </header>
             <div class="col-md-6">
                 <details>
@@ -403,12 +403,23 @@
                     <p>
                         Bo tutaj dane oficjalne najbardziej odbiegają od rzeczywistości i tworzą fałszywy obraz
                         jednolicie katolickiej Polski. Według obliczeń samego kościoła katolickiego i badań
-                        (np. CBOSu), tylko 40% Polaków i Polek regularnie uczestniczy w obrzędach religijnych.
-                        Nawet przed epidemią koronawirusa 15% nie uczestniczyło w nich w ogóle, a kolejne 25% robiło
+                        (np. CBOSu), tylko 46% Polaków i Polek regularnie uczestniczy w obrzędach religijnych.
+                        Nawet przed epidemią koronawirusa 16% nie uczestniczyło w nich w ogóle, a kolejne 21% robiło
                         to najwyżej kilka razy w roku. Jednocześnie, wobec ostatnich wydarzeń i wychodzących na
                         światło dzienne faktów, coraz więcej osób poddaje refleksji swój stosunek do religii i
                         kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić, jak bardzo sformułowanie
                         “Polak-katolik” odbiega od prawdy.
+                    </p>
+                </details>
+
+                <details>
+                    <summary>
+                        <h4>Czy spis odbywa się tylko przez internet?</h4>
+                    </summary>
+                    <p>
+                        Nie, istnieje też możliwość, że osoba dokonująca spisu zadzwoni do Ciebie lub osobiście
+                        odwiedzi Cię w domu/ mieszkaniu. Samospis internetowy jest jednak w tym roku po raz pierwszy
+                        podstawowym sposobem udziału w spisie i większość z nas powinna spisać się w ten sposób.
                     </p>
                 </details>
             </div>
@@ -431,7 +442,7 @@
                     <p>
                         A wyznanie ma szczególne znaczenie. Od lat mówi się, że 96% Polaków i Polek to katolicy i
                         katoliczki (dane ze spisu w 2011 roku). Trudno uwierzyć, że tak jest naprawdę, skoro tylko
-                        40% z nas regularnie uczestniczy we mszach.
+                        46% z nas regularnie uczestniczy we mszach.
                     </p>
                     <p>
                         Tylko osobisty udział w spisie zapewnia, że udzielisz takiej odpowiedzi, jakiej zechcesz.
