--- a/indexxx.html
+++ b/indexxx.html
@@ -13,19 +13,19 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/styles-002.css" rel="stylesheet" />
+    <link href="assets/css/styles-003.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
 
     <!--     Google Fonts     -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
     <div class="container">
-        <nav class="navbar navbar-ct navbar-custom-grey navbar-fixed-top navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-ct navbar-white navbar-fixed-top navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -156,7 +156,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2>O co chodzi?</h2>
+                    <h2 class="target-indicator">O co chodzi?</h2>
                     <p>
                         <strong>Raz na dekadę</strong> państwo polskie liczy swoich obywateli i obywatelki.
                         Zbiera też m.in. dane o warunkach mieszkaniowych, relacjach rodzinnych, narodowości i wyznaniu.
@@ -173,7 +173,7 @@
                     <p><strong>W tym roku</strong> wszyscy musimy spisać się przez internet.</p>
                 </div>
             </div>
-
+        </div>
     </section>
 
     <section class="section section--emphasised how-to-count">
