--- a/indexxx.html
+++ b/indexxx.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<!--<html lang="en" class="debug">-->
 <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
@@ -37,6 +38,7 @@
                 </a>
                 <a href="/">
                     <div class="logo-container">
+                        <img src="assets/img/logo.svg" alt="Chcę się liczyć" title="Chcę się liczyć">
                         <h1 class="brand">Chcę się liczyć</h1>
                     </div>
                 </a>
@@ -46,10 +48,10 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#o-co-chodzi">O co chodzi?</a></li>
-                  <li><a href="#jak-sie-spisac">Jak się spisać?</a></li>
+                  <li><a href="#jak-sie-spisac">Jak się spisać</a></li>
                   <li><a href="#wyznanie">Wyznanie</a></li>
-                  <li><a href="#pytania-i-odpowiedzi">Pytania i odpowiedzi</a></li>
-                  <li><a href="#po-co-mam-brac-udzial">Po co mam brać udział?</a></li>
+                  <li><a href="#pytania-i-odpowiedzi">Pytania</a></li>
+                  <li><a href="#po-co-mam-brac-udzial">Po co brać udział?</a></li>
                </ul>
 
             </div><!-- /.navbar-collapse -->
@@ -62,16 +64,26 @@
 
 
 <main class="main">
-    <section class="section">
+    <div class="section social">
+        <p class="container social__container">
+           <strong class="social__callout">Podziel się:</strong>
+            <button class="social__button social__button--facebook" type="button">
+                <img src="assets/icon/facebook-icon.svg" alt="Facebook">
+            </button>
+            <button class="social__button social__button--twitter" type="button">
+                <img src="assets/icon/twitter-icon.svg" alt="Twitter">
+            </button>
+        </p></div>
+    <section class="section intro">
         <div class="container">
         <div class="row">
-            <header class="col-md-5">
+            <header class="col-md-6">
                 <div class="main-title">
                     <h1>Spis Powszechny Online</h1>
                     <h3>1.04 - 30.06</h3>
                 </div>
             </header>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <p>
                     <strong>Już za chwilę kolejny spis powszechny.</strong><br/>
                     <strong>Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady.</strong>
