--- a/indexxx.html
+++ b/indexxx.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/styles-003.css" rel="stylesheet" />
+    <link href="assets/css/styles-004.css" rel="stylesheet" />
 
     <!--     Font Awesome     -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
@@ -78,9 +78,11 @@
         <div class="container">
         <div class="row">
             <header class="col-md-6">
-                <div class="main-title">
-                    <h1>Spis Powszechny Online</h1>
-                    <h3>1.04 - 30.06</h3>
+                <div class="main-header">
+                    <h1 class="main-header__heading">Spis Powszechny Online</h1>
+                    <h3 class="main-header__dates">
+                        1.04 - 30.06
+                    </h3>
                 </div>
             </header>
             <div class="col-md-6">
