initial section styles

--- a/indexxx.html
+++ b/indexxx.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en">
-<!--<html lang="en" class="debug">-->
+<html lang="pl">
+<!--<html lang="pl" class="debug">-->
 <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
@@ -73,9 +73,10 @@
             <button class="social__button social__button--twitter" type="button">
                 <img src="assets/icon/twitter-icon.svg" alt="Twitter">
             </button>
-        </p></div>
-    <section class="section intro">
-        <div class="container">
+        </p>
+    </div>
+    <section class="section base-info">
+        <div class="container intro">
         <div class="row">
             <header class="col-md-6">
                 <div class="main-header">
@@ -86,37 +87,41 @@
                 </div>
             </header>
             <div class="col-md-6">
-                <p>
-                    <strong>Już za chwilę kolejny spis powszechny.</strong><br/>
-                    <strong>Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady.</strong>
+                <p class="intro-text">
+                    <strong class="intro-text__important intro-text__important--first">
+                        Już za chwilę kolejny spis powszechny.
+                    </strong>
+                    <br class="hidden"/>
+                    <strong class="intro-text__important intro-text__important--second">
+                        Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady.
+                    </strong>
                 </p>
-                <p>
+                <p class="intro-text intro-text--last-census">
                     Według poprzedniego spisu niemal wszyscy wyznajemy katolicyzm.<br/>
-                    To powszechne przekonanie ma ogromny wpływ na politykę i nasze życie. Czy skoro wszyscy jesteśmy
-                    w Kościele, Polska powinna stać się państwem wyznaniowym? Czy episkopat powinien dyktować ustawy?
+                    To powszechne przekonanie ma ogromny wpływ na politykę i nasze życie.<br/>
+                    Czy skoro wszyscy jesteśmy w Kościele, Polska powinna stać się państwem wyznaniowym?
+                    Czy episkopat powinien dyktować ustawy?
 
                 </p>
-                <p>
-                    Przez ostatnie dziesięć lat wiele osób oddaliło się od religii. Czas zastanowić się, czy w rubryce
-                    wyznanie zaznaczać “katolicyzm”. Czas pokazać, w co naprawdę wierzymy.
+                <p class="intro-text intro-text--religion">
+                    Przez ostatnie dziesięć lat wiele osób oddaliło się od religii. <br/>
+                    Czas zastanowić się, czy w rubryce wyznanie zaznaczać “<em>katolicyzm</em>”.<br/>
+                    Czas pokazać, w co naprawdę wierzymy.
                 </p>
-                <p>
+                <p class="intro-text intro-text--change">
                     <strong>
                         Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem.
                     </strong>
                 </p>
 
-                <div class="space-30"></div>
-                <footer>
-                    <button class="btn btn-lg btn--base main-cta">Liczę się</button>
+                <footer class="intro-footer">
+                    <button class="btn btn-fill btn--cta intro-footer__cta">Liczę się</button>
                 </footer>
             </div>
         </div>
         </div>
-    </section>
 
-    <section class="section">
-        <div class="container">
+        <div class="container summary">
         <div class="row info-boxes">
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
                 <article class="info-box__container">
