--- a/indexxx.html
+++ b/indexxx.html
@@ -5,23 +5,16 @@
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Chcę się liczyć</title>
-
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
     <link href="assets/css/styles-004.css" rel="stylesheet" />
-
-    <!--     Font Awesome     -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
-
     <!--     Google Fonts     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -125,7 +118,7 @@
         <div class="row info-boxes">
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
                 <article class="info-box__container">
-                    <i class="fas fa-hand-point-right info-box__icon"></i>
+                    <img src="assets/icon/calendar-icon.svg" class="info-box__icon" alt="Kiedy?"/>
                     <h5 class="info-box__title">Raz na 10 lat</h5>
                     <p>
                         Pomóż pokazać, jaka jest dzisiaj Polska. Dane ze spisu na następne 10 lat utrwalą obraz tego,
@@ -138,7 +131,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
                 <article class="info-box__container">
-                    <i class="fas fa-users info-box__icon"></i>
+                    <img src="assets/icon/house-icon.svg" class="info-box__icon" alt="Gdzie?"/>
                     <h5 class="info-box__title">Spisujemy się mieszkaniami</h5>
                     <p>Każde mieszkanie wypełnia jeden formularz online.</p>
                     <p>Upewnij się, że przy tym będziesz.</p>
@@ -147,7 +140,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
                 <article class="info-box__container">
-                    <i class="fas fa-puzzle-piece info-box__icon "></i>
+                    <img src="assets/icon/receipt-icon.svg" class="info-box__icon" alt="Jak?"/>
                     <h5 class="info-box__title">Nie idź na skróty</h5>
                     <p>W niektórych pytaniach, <strong>najpopularniejsze odpowiedzi są na wierzchu</strong>.</p>
                     <p>Co jeśli Twoja do nich nie należy?</p>
@@ -156,7 +149,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
                 <article class="info-box__container">
-                    <i class="info-box__icon fas fa-place-of-worship"></i>
+                    <img src="assets/icon/church-icon.svg" class="info-box__icon" alt="Dlaczego?"/>
                     <h5 class="info-box__title">Wyznanie</h5>
                     <p>
                         Czy w Polsce żyją prawie sami katolicy i katoliczki?
@@ -171,25 +164,25 @@
     </section>
 
     <a id="o-co-chodzi"></a>
-    <section class="section section wtf">
-        <div class="container">
+    <section class="section say-what">
+        <div class="container say-what__container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="target-indicator">O co chodzi?</h2>
-                    <p>
+                    <h2 class="target-indicator say-what__title">O co chodzi?</h2>
+                    <p class="say-what__text">
                         <strong>Raz na dekadę</strong> państwo polskie liczy swoich obywateli i obywatelki.
                         Zbiera też m.in. dane o warunkach mieszkaniowych, relacjach rodzinnych, narodowości i wyznaniu.
                     </p>
-                    <p>
+                    <p class="say-what__text">
                         <strong>Po co nam</strong> te dane? Na przykład po to, żeby wiedzieć, ile pieniędzy
                         przeznaczyć w poszczególnych gminach na szkolnictwo, a ile na domy pomocy społecznej,
                         gdzie budować przedszkola, a gdzie szpitale.
                     </p>
-                    <p>
+                    <p class="say-what__text">
                         <strong>Dzięki tym danym</strong> partie polityczne wiedzą, ile osób należy do sprzyjających
                         im grup i z kim muszą się liczyć.
                     </p>
-                    <p><strong>W tym roku</strong> wszyscy musimy spisać się przez internet.</p>
+                    <p class="say-what__text"><strong>W tym roku</strong> wszyscy musimy spisać się przez internet.</p>
                 </div>
             </div>
         </div>
