--- a/index.html
+++ b/index.html
@@ -1,2 +1,48 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8" /><title>Chcę się liczyć</title><style>body{text-align:center;width:200px;}body:before{content:"chcę się liczyć";transform:translate(40vw,40vh) rotate(17deg) scale(5);display:block}</style></head><body></body></html>
+<html lang="en"><head><meta charset="utf-8" />
+    <title>Chcę się liczyć</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <style>
+        html {
+            --base: #000A8F; /* rgb(0,10,143) */
+        }
+        body {
+            font-family: 'Montserrat', sans-serif;
+            color: var(--base);
+        }
+        h1, h3, p, a{
+            -moz-osx-font-smoothing: grayscale;
+            -webkit-font-smoothing: antialiased;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
+        }
+        h1, h3, p, body {
+            text-align: center;
+        }
+        img {
+            vertical-align: middle;
+            border: 0;
+            margin: 0;
+            display: inline-block;
+        }
+    </style>
+</head>
+<body>
+<h1>Chcę się liczyć</h1>
+<br />
+<h3>Jakie wyznanie podasz w Spisie Powszechnym?</h3>
+<p>Startujemy 15 marca</p>
+<p>
+<a href="https://www.facebook.com/Chc%C4%99-si%C4%99-liczy%C4%87-106340121507510" target="_blank">
+    <img src="assets/icon/facebook-icon.svg" alt="Facebook" />
+</a>
+&nbsp;
+&nbsp;
+<a href="https://twitter.com/chcesieliczyc" target="_blank">
+    <img src="assets/icon/twitter-icon.svg" alt="Twitter" />
+</a>
+</p>
+<p>email: <a href="mailto:kontaktchsl@protonmail.com">kontaktchsl@protonmail.com</a></p>
+</body>
+</html>
