--- a/indexxx.html
+++ b/indexxx.html
@@ -188,33 +188,31 @@
         </div>
     </section>
 
-    <section class="section section--emphasised how-to-count">
+    <section class="section how-to">
         <div class="container">
             <div class="row">
             <header class="col-md-6">
                 <a id="jak-sie-spisac"></a>
-                <h1 class="target-indicator">Jak Się Spisać?</h1>
+                <h1 class="target-indicator how-to__title">Jak się spisać?</h1>
             </header>
-            <article class="col-md-6">
+            <article class="col-md-6 how-to-prepare">
                 <h2 class="sr-only">Czy trzeba się przygotować</h2>
-                <p style="font-size: 200%; background-color: yellow">
-                    <strong>
-                        <em>
-                            jedno mieszkanie - jeden formularz
-                        </em>
-                    </strong>
+                <p class="how-to-prepare__highlight">
+                    Jedno mieszkanie = Jeden formularz
                 </p>
-                <p>
+                <p class="how-to-prepare__text">
                     <strong>Na jedno mieszkanie/ dom jednorodzinny przypada jeden formularz spisowy.</strong>
                     Pierwsza część to spis zamieszkujących, druga dotyczy warunków mieszkaniowych.
                     W ostatniej są formularze dla poszczególnych osób. Tam znajduje się m.in. pytanie o wyznanie.
                 </p>
-                <p>Najlepiej, żeby każdy wypełnił tę część osobiście, więc upewnij się, że przy tym będziesz.</p>
+                <p class="how-to-prepare__text">
+                    Najlepiej, żeby każdy wypełnił tę część osobiście, więc upewnij się, że przy tym będziesz.
+                </p>
             </article>
         </div>
-            <div class="row">
+            <div class="row how-to-login">
             <article class="col-md-6">
-                <h2>Logowanie</h2>
+                <h2 class="how-to-login__title">Logowanie</h2>
                 <p>
                     Spis odbywa się online na stronie
                     <a href="https://spis.gov.pl/"
@@ -242,7 +240,7 @@
 
             <a id="wyznanie"></a>
             <div class="row target-indicator-wrapper">
-            <article class="col-md-6 col-md-offset-6">
+            <article class="col-md-6 col-md-offset-6 how-to-religion">
                 <h2 class="target-indicator">Pytanie o wyznanie</h2>
                 <p>
                     Pytanie o wyznanie znajdziesz w trzeciej części formularza spisowego. Zawiera ona
