--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             margin: 0;
             display: inline-block;
         }
+        a {
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
