--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8" />
+<html lang="pl">
+<head>
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Chcę się liczyć</title>
+    <meta property="og:url"           content="https://chcesieliczyc.pl" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Chcę się liczyć" />
+    <meta property="og:description"   content="Już za chwilę kolejny spis powszechny. Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady. Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem." />
+    <meta property="og:image"         content="https://chcesieliczyc.pl/assets/img/chcesieliczyc.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <style>
@@ -37,12 +47,12 @@
 <h3>Jakie wyznanie podasz w Spisie Powszechnym?</h3>
 <p>Startujemy 15 marca</p>
 <p>
-<a href="https://www.facebook.com/Chc%C4%99-si%C4%99-liczy%C4%87-106340121507510" target="_blank">
+<a href="https://www.facebook.com/sharer.php?u=https://chcesieliczyc.pl" target="_blank">
     <img src="assets/icon/facebook-icon.svg" alt="Facebook" />
 </a>
 &nbsp;
 &nbsp;
-<a href="https://twitter.com/chcesieliczyc" target="_blank">
+<a href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%20Wejd%C5%BA%20na%3A%20&url=https://chcesieliczyc.pl&via=chcesieliczyc&hashtags=chcesieliczyc" target="_blank">
     <img src="assets/icon/twitter-icon.svg" alt="Twitter" />
 </a>
 </p>
