--- a/indexxx.html
+++ b/indexxx.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Chcę się liczyć</title>
+    <meta property="og:url"           content="https://chcesieliczyc.pl" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Chcę się liczyć" />
+    <meta property="og:description"   content="Już za chwilę kolejny spis powszechny. Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady. Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem." />
+    <meta property="og:image"         content="https://chcesieliczyc.pl/assets/img/chcesieliczyc.png" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -60,12 +65,18 @@
     <div class="section social">
         <p class="container social__container">
            <strong class="social__callout">Podziel się:</strong>
-            <button class="social__button social__button--facebook" type="button">
+            <a
+                    class="social__button social__button--facebook"
+                    href="https://www.facebook.com/sharer.php?u=https://chcesieliczyc.pl"
+                    target="_blank">
                 <img src="assets/icon/facebook-icon.svg" alt="Facebook">
-            </button>
-            <button class="social__button social__button--twitter" type="button">
+            </a>
+            <a
+                    class="social__button social__button--twitter"
+                    href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%20Wejd%C5%BA%20na%3A%20&url=https://chcesieliczyc.pl&via=chcesieliczyc&hashtags=chcesieliczyc"
+                    target="_blank">
                 <img src="assets/icon/twitter-icon.svg" alt="Twitter">
-            </button>
+            </a>
         </p>
     </div>
     <section class="section base-info">
