--- a/indexxx.html
+++ b/indexxx.html
@@ -22,6 +22,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<aside class="cookies-and-privacy" style="display: none">
+    <p class="container">
+        Serwis wykorzystuje pliki cookies. Korzystając z naszej strony wyrażasz zgodę na ich wykorzystywanie. <br />
+        Dowiedz się więcej <a href="/polityka-prywatnosci" target="_blank">o polityce cookies i prywatności</a>
+    </p>
+    <button class="btn cookies-and-privacy__hide">OK, Rozumiem</button>
+</aside>
 <header>
     <div class="container">
         <nav class="navbar navbar-ct navbar-white navbar-fixed-top navbar-fixed-top" role="navigation">
@@ -478,6 +485,14 @@
         </p>
     </div>
 </footer>
+<script>
+    const doc = document;
+    ((k,s,d,e,b,v = s.getItem(k)) => {
+        v || (e.style.display = 'block');
+        v || b.addEventListener('click', () => { e && d.body.removeChild(e); s.setItem(k, '1') });
+        v && d.body.removeChild(e);
+    })('ciasteczka', localStorage, doc, doc.querySelector('.cookies-and-privacy'), doc.querySelector('.cookies-and-privacy__hide'));
+</script>
 
 </body>
 
